RESOLVED FIXED273229
Regression(277265@main) js/dom/encode-URI-test.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=273229
Summary Regression(277265@main) js/dom/encode-URI-test.html is flaky
Chris Dumez
Reported 2024-04-24 21:47:51 PDT
js/dom/encode-URI-test.html has been flaky since 277265@main: ``` --- /Volumes/Data/worker/Apple-Monterey-Release-WK1-Tests/build/layout-test-results/js/dom/encode-URI-test-expected.txt +++ /Volumes/Data/worker/Apple-Monterey-Release-WK1-Tests/build/layout-test-results/js/dom/encode-URI-test-actual.txt @@ -1 +1,5 @@ -Testing complete. No failures. +called decodeURI on "%0" and got "\t" instead of "exception" + +called decodeURIComponent on "%0" and got "\t" instead of "exception" + +Testing complete. 2 tests failed. ```
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-24 21:48:01 PDT
Chris Dumez
Comment 2 2024-04-24 22:09:38 PDT
EWS
Comment 3 2024-04-25 06:37:54 PDT
Committed 277975@main (d1a5c8f02f39): <https://commits.webkit.org/277975@main> Reviewed commits have been landed. Closing PR #27731 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.