Regression(277265@main) js/dom/encode-URI-test.html is flaky https://bugs.webkit.org/show_bug.cgi?id=273229 rdar://127029885

Reviewed by Yusuke Suzuki.

In 277265@main, I updated the `k` variable to use size_t instead of int
since switching to std::span upgraded the `length` type to size_t. However,
switching to an unsigned type led to overflows in some of the checks, such
as this one:
```
if (k <= characters.size() - 3)
```

To address the issue, I updated the conditions to guard against overflows.

* Source/JavaScriptCore/runtime/JSGlobalObjectFunctions.cpp:
(JSC::decode):

Canonical link: https://commits.webkit.org/277975@main